# mycelium

./: .gitignore  CMakeLists.txt  LICENSE
resources/shader/: ray.frag  ray.geom  ray.vert
src/: main.cpp
src/control/: components.hpp  inputsystem.cpp  inputsystem.hpp  rendersystem.cpp  rendersystem.hpp  simstate.cpp  simstate.hpp  simsystem.cpp  simsystem.hpp
src/graphics/: surfacerenderer.cpp  surfacerenderer.hpp
src/simulation/: cubicmesh.hpp  mycelium.cpp  pointbin.hpp
